# gaia-benchmark

./: README.md  requirements.txt
benchmark_bac_arch/: README.md  bac_arch_benchmark.ipynb
benchmark_context/: README.md  plot_results.ipynb  run_context_eval.py  run_context_eval_from_m8.py  utils.py
benchmark_context/data/: blastp_results_3k.pkl  cluster_sampled_3k.fasta  esm2_results_3k.pkl  glm2_results_3k.pkl  mmseqs_results_3k.pkl
benchmark_sequence/: README.md  create_blastp_groundtruth.py  plot_results.ipynb  qdrant_eval.py
benchmark_sequence/data/: ESM2_k100_retrieval_results.csv  blastp_groundtruth_results.tsv  gLM2_embed_k100_retrieval_results.csv
benchmark_structure/: README.md  plot_results.ipynb  scop_lookup.tsv  search_esm2.py  search_glm2.py
benchmark_structure/search_result/: blastp.tsv  mmseqs2.tsv
prepare_data/: README.md  embed_esm2.py  embed_glm2.py  hf_to_fasta.py  tokenize_dataset.py
prepare_data/configs_accelerate/: ddp.yaml
prepare_data/qdrant_upload/: Cargo.toml
prepare_data/qdrant_upload/src/: base.rs  glm.rs  main.rs  plm.rs
